# python-dhall

./: .gitignore  Cargo.toml  Makefile  README.md  lint.sh  pyproject.toml  shell.nix
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml
dhall/: __init__.py  __init__.pyi
src/: lib.rs
tests/: test_docs.py  test_hypothesis.py  test_known_bad_behaviour.py
