[package]
name = "python-dhall"
version = "0.0.1"
authors = ["Tristan Cacqueray <tdecacqu@redhat.com>"]
description = "A Python module for reading Dhall lang"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/TristanCacqueray/python-dhall"
homepage = "https://github.com/TristanCacqueray/python-dhall"
readme = "README.md"
keywords = ["dhall", "python"]

[package.metadata.maturin]
classifier = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]

[dependencies]
serde_json = "1.0.42"
failure = "0.1.6"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_dhall = "0.5.0"
pyo3 = "0.8.3"

[lib]
name = "dhall"
crate-type = ["rlib", "cdylib"]

[features]
# We must make this feature optional to build binaries such as the profiling crate
default = ["pyo3/extension-module"]

# [workspace]
# members = [ "profiling" ]

# [profile.release]
# codegen-units = 1
# debug = false
# incremental = false
# lto = true
# opt-level = 3
