[package]
name = "dhall"
version = "0.1.8"
authors = ["Simon Zeng <contact@simonzeng.com>", "Tristan Cacqueray <tdecacqu@redhat.com>", "Matthias Endler <matthias-endler@gmx.net>"]
description = "Python bindings for dhall, a functional configuration language"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/s-zeng/dhall-python"
homepage = "https://github.com/s-zeng/dhall-python"
readme = "README.md"
keywords = ["dhall", "python"]

[package.metadata.maturin]
classifier = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]

[dependencies]
serde_json = "1"
serde = "1"
serde_derive = "1"
serde_dhall = "0.10"
pyo3 = "0.14"
thiserror = "1"

[lib]
name = "dhall"
crate-type = ["rlib", "cdylib"]

[features]
# We must make this feature optional to build binaries such as the profiling crate
default = ["pyo3/extension-module"]

# [workspace]
# members = [ "profiling" ]

# [profile.release]
# codegen-units = 1
# debug = false
# incremental = false
# lto = true
# opt-level = 3
