[tool.poetry]
name = "dhall-python"
version = "0.1.1"
description = "A Python module for reading Dhall lang"
authors = ["Simon Zeng <contact@simonzeng.com>", "Tristan Cacqueray <tdecacqu@redhat.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/s-zeng/dhall-python"
keywords = ["dhall", "python"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
pylint = "^1.9"
flake8 = "^3.5"
wheel = "*"
pytest-runner = "*"
pytest-benchmark = "*"
hypothesis = "*"
autopep8 = "*"
maturin = "==0.7.7"

# [build-system]
# requires = ["maturin"]
# build-backend = "maturin"

# [tool.maturin]
# bindings = "cffi"
# manylinux = "on"

