[tool.poetry]
name = "dhall"
version = "0.1.3"
description = "Python bindings for dhall, a functional configuration language"
authors = ["Simon Zeng <contact@simonzeng.com>", "Tristan Cacqueray <tdecacqu@redhat.com>", "Matthias Endler <matthias-endler@gmx.net>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "dhall" }]
repository = "https://github.com/s-zeng/dhall-python"
keywords = ["dhall", "python"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
pylint = "^1.9"
flake8 = "^3.5"
wheel = "*"
pytest-runner = "*"
pytest-benchmark = "*"
hypothesis = "*"
autopep8 = "*"
maturin = "==0.7.7"

[build-system]
requires = ["maturin"]
build-backend = "maturin"

[tool.maturin]
manylinux = "2010-unchecked"
sdist-include = ["dhall/*"]
